--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -6,20 +6,21 @@
       %th Date
       %th Description
       %th Event link
+      %th Venue
       %th
       %th
       %th
 
   %tbody
     - @events.each do |event|
-      - if upcoming?(event)
-        %tr
-          %td= event.date
-          %td= event.description
-          %td= event.event_link
-          %td= link_to 'Show', event
-          %td= link_to 'Edit', edit_event_path(event)
-          %td= link_to 'Destroy', event, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %tr
+        %td= event.date
+        %td= event.description
+        %td= event.event_link
+        %td= event.venue_name
+        %td= link_to 'Show', event
+        %td= link_to 'Edit', edit_event_path(event)
+        %td= link_to 'Destroy', event, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
