Add functionality to create new venue

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -21,5 +21,9 @@
   .field
     = f.select :venue_id, options_from_collection_for_select(Venue.all, :id, :name)
 
+  .venue-notice
+    %h4 Your venue is not here?
+    = link_to("Add Venue", new_venue_path)
+
   .actions
     = f.submit 'Save'
