--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    = render "layouts/navigation"
     - if flash[:notice]
       .alert.alert-success
         %button{ type: "button", class: "close", data: { dismiss: "alert" } }
