--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -19,6 +19,12 @@ h6 {
   margin: 0 0 $small-spacing;
 }
 
+h1 {
+  font-style: italic;
+  font-size: 4em;
+  text-transform: uppercase;
+}
+
 p {
   margin: 0 0 $small-spacing;
 }
