--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$base-font-family: $helvetica;
-$heading-font-family: $base-font-family;
+$base-font-family: "freight-sans-pro", $helvetica;
+$heading-font-family: "omnes-pro", $helvetica;
 
 // Font Sizes
 $base-font-size: 1em;
@@ -20,6 +20,7 @@ $blue: #477dca;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
+$background-gray: #f7f7f7;
 
 // Font Colors
 $base-background-color: #fff;
@@ -33,3 +34,8 @@ $base-border: 1px solid $base-border-color;
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
+
+// Shadows
+$card-shadow: -1px 0 2px 0 rgba(0,0,0,0.1),
+              1px 0 2px 0 rgba(0,0,0,0.1),
+              0 1px 1px 0 rgba(0,0,0,0.1);
