--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-    = javascript_include_tag "https://use.typekit.net/qxi5llz.js"
+    = typekit_include_tag("qxi5llz")
   %body
     = render "layouts/navigation"
     - if flash[:notice]
