--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,6 +1,6 @@
 .event
   %div.outer-container
-    .event__image
+    = event_flyer_image(event)
     .event__info
       .event__header
         %h2.event__header__title
