--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @event do |f|
+= form_for @event, html: { multipart: true } do |f|
   - if @event.errors.any?
     #error_explanation
       %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
@@ -11,6 +11,9 @@
   .field
     = f.label :date
     = f.datetime_select :date
+  .field
+    = f.label :flyer
+    = f.file_field :flyer
   .field
     = f.label :description
     = f.text_area :description
