--- a/app/assets/stylesheets/patterns/_event.scss
+++ b/app/assets/stylesheets/patterns/_event.scss
@@ -2,8 +2,6 @@
   background-color: white;
   //border-bottom: 1px $light-gray solid;
   margin-bottom: 1em;
-  box-shadow: $card-shadow;
-
 }
 
 .event__edit-options {
@@ -13,6 +11,9 @@
 .event__header {
   margin-bottom: 1em;
 
+  h1 {
+    font-weight: 300;
+  }
 }
 
 .event__header__like {
@@ -26,10 +27,8 @@
 .event__header__title {
   @include span-columns(8 of 9);
   font-size: 2em;
-  font-style: italic;
-  font-weight: normal;
+  font-weight: 300;
   margin-bottom: 1.25rem;
-  text-transform: uppercase;
 
   a {
     color: #2f63b7;
@@ -52,15 +51,24 @@
   }
 }
 
+.event__image {
+  @include span-columns(4);
+  background-color: gray;
+
+  img {
+    display: block;
+  }
+}
+
 .event__info {
   @include span-columns(12);
-  padding: 2em;
+  padding: 0 2em 2em 0;
 }
 
 .event__image + .event__info {
-  @include span-columns(9);
+  @include span-columns(8);
   @include omega();
-  padding: 2em 2em 2em 0;
+  padding: 2em;
 }
 
 .event__info__date,
