Formats navigation bar

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -18,9 +18,10 @@ $base-z-index: 0;
 // Colors
 $blue: #477dca;
 $dark-gray: #333;
-$medium-gray: #999;
-$light-gray: #ddd;
+$medium-gray: #888;
+$light-gray: #eee;
 $background-gray: #f7f7f7;
+$subtle-gray: #e1e1e1;
 
 // Font Colors
 $base-background-color: #fff;
