--- a/app/assets/stylesheets/patterns/_navigation.scss
+++ b/app/assets/stylesheets/patterns/_navigation.scss
@@ -1,7 +1,9 @@
 .navigation {
   @include row();
-  background-color: black;
-  padding: 1em 0;
+  background-color: white;
+  border-bottom: 1px $light-gray solid;
+  position: relative;
+  text-transform: uppercase;
 }
 
 .navigation__frame {
@@ -13,10 +15,24 @@
 }
 
 .navigation__item {
+  border-right: 1px $light-gray solid;
+  display: block;
   float: left;
-  margin-left: 1em;
+}
+
+.navigation__link {
+  background-color: white;
+  color: $medium-gray;
+  display: block;
+  font-weight: 700;
+  padding: 1em;
+
+  &:hover {
+    background-color: lighten($light-gray, 5%);
+  }
 }
 
 .navigation__right {
+  border-left: 1px $light-gray solid;
   float: right;
 }
