Fixes margin and spacing between event elements
* Adds responsive styles to events
* Provides fixed margin around content

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,7 +1,7 @@
-%main.main-container
-  %header.outer-container
+%main.outer-container.main-container
+  %header
     %h1 Events
 
-  %section.outer-container
+  %section
     - @events.each do |event|
       = render partial: "event", locals: { event: event }
