--- a/app/views/events/_like.html.haml
+++ b/app/views/events/_like.html.haml
@@ -2,10 +2,10 @@
   - if current_user
     - if like = current_user.likes.find_by(event_id: event.id)
       = form_for like, method: :delete do |f|
-        = f.submit "Unlike"
+        = f.submit "Unlike", class: "event__like__button"
 
     - else
       = form_for Like.new(event: event) do |f|
         = f.hidden_field(:event_id, value: event.id)
-        = f.submit "Like"
+        = f.submit "Like", class: "event__like__button"
 
