Add My Events page which lists favorited events

--- a/app/assets/stylesheets/patterns/_navigation.scss
+++ b/app/assets/stylesheets/patterns/_navigation.scss
@@ -2,6 +2,7 @@
   @include row();
   background-color: white;
   border-bottom: 1px $light-gray solid;
+  border-top: 1px $light-gray solid;
   position: relative;
   text-transform: uppercase;
 }
