--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,6 +5,8 @@
     %li.navigation__item
       = link_to "All Events", events_path, class: "navigation__link"
     %li.navigation__item
+      = link_to "My Events", likes_path, class: "navigation__link"
+    %li.navigation__item
       = link_to "Venues", venues_path, class: "navigation__link"
   %ul.navigation__right
     %li.navigation__item
