Add tagging functionality to events

--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -22,6 +22,8 @@
         Likes
       - event.users.each do |user|
         = user.email
+    .tags
+      = render event.tags
   .event__edit-options
     - if user_signed_in?
       = link_to 'Edit', edit_event_path(event)
