--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -20,6 +20,9 @@
   .field
     = f.label :event_link
     = f.text_field :event_link
+  .field
+    = f.label :tag_list
+    = f.text_field :tag_list
 
   .field
     = f.select :venue_id, options_from_collection_for_select(Venue.all, :id, :name)
