--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -17,16 +17,16 @@
           = f.text_field :title, value: "Enter your event here"
         .field
           = f.label :start_date
-          = f.text_field :start_date
+          = f.text_field :start_date, class: "datepicker"
         .field
           = f.label :start_time
-          = f.text_field :start_time
+          = f.text_field :start_time, class: "timepicker"
         .field
           = f.label :end_date
-          = f.text_field :end_date
+          = f.text_field :end_date, class: "datepicker"
         .field
           = f.label :end_time
-          = f.text_field :end_time
+          = f.text_field :end_time, class: "timepicker"
         .field
           = f.label :flyer
           = f.file_field :flyer
