--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New event
+%main.outer-container.main-container
+  %h1 New event
+  = link_to 'Back', events_path
 
-= render 'form'
+  %section
+    = render 'form'
 
-= link_to 'Back', events_path
