--- a/app/assets/stylesheets/patterns/_containers.scss
+++ b/app/assets/stylesheets/patterns/_containers.scss
@@ -7,9 +7,13 @@
 }
 
 .form-container {
-  @include span-columns(6);
-  @include shift(3);
-
+  @include span-columns(12);
+  @include shift(0);
   border: $base-border;
-  padding: 2em;
+  margin-bottom: 5em;
+
+  @include media($medium-screen) {
+    @include span-columns(8);
+    @include shift(2);
+  }
 }
