--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -21,6 +21,7 @@ $medium-gray: #888;
 $light-gray: #eee;
 $background-gray: #f7f7f7;
 $subtle-gray: #e1e1e1;
+$warning: #DC302C;
 
 // Font Colors
 $base-background-color: #fff;
@@ -30,6 +31,7 @@ $action-color: $blue;
 // Border
 $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
+$base-border-warning: 1px solid darken($warning, 5%);
 $base-border-radius: 3px;
 
 // Forms
