--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -1,6 +1,7 @@
 @import "button";
 @import "error-explanation";
 @import "field-group";
+@import "flyer-grid";
 @import "containers";
 @import "event";
 @import "footer";
