--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,9 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     = typekit_include_tag("qxi5llz")
+    = javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/packery/2.0.0/packery.pkgd.min.js"
+    = javascript_include_tag "https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"
+    = javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.min.js"
   %body
     = render "layouts/navigation"
     - if flash[:notice]
