Basic styling for login forms

--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -4,6 +4,7 @@
 @import "containers";
 @import "event";
 @import "helpers";
+@import "horizontal-nav";
 @import "logo";
 @import "navigation";
 @import "tags";
