--- a/app/assets/stylesheets/patterns/_field-group.scss
+++ b/app/assets/stylesheets/patterns/_field-group.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.field-group__header-nav {
+  float: right;
+}
+
 .field-group__venue-notice {
   background-color: $background-gray;
   border-radius: $base-border-radius;
