--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -13,7 +13,10 @@
       =link_to "Post an Event", new_event_path, class: "navigation__link"
     - if user_signed_in?
       %li.navigation__item
-        = link_to "My Profile", edit_profile_path(current_user.profile.id), class: "navigation__link"
+        - if current_user.profile
+          = link_to "My Profile", edit_profile_path(current_user.profile.id), class: "navigation__link"
+        - else
+          = link_to "My Profile", new_profile_path, class: "navigation__link"
       %li.navigation__item
         = link_to "Sign out", destroy_user_session_path, method: "delete", class: "navigation__link"
     - else
