--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -26,6 +26,10 @@
             = link_to "More Info", @event.event_link, class: "button"
           .event__info__tags
             = render @event.tags
+          .djs
+            %h3 DJs
+            - @event.profiles.each do |profile|
+              = profile.name
         .event__edit-options
           - if user_signed_in?
             = link_to 'Edit', edit_event_path(@event)
