--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -23,6 +23,22 @@ h1 {
   font-size: 3em;
 }
 
+h2 {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
 p {
   font-size: 1.25em;
   margin: 0 0 $small-spacing;
