--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -7,5 +7,7 @@
 @import "horizontal-nav";
 @import "logo";
 @import "navigation";
+@import "profile";
+@import "social-media";
 @import "tags";
 @import "venue-card";
