--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,17 +1,39 @@
-%p#notice= notice
+%main
+  %header.full-width-container--dark
+    .profile
+      .profile__image
+        %img{ src: @profile.image.url }
+      .profile__info
+        %h2.profile__header
+          = @profile.name
+        .social-media
+          = render partial: "social", locals: { profile: @profile }
+        .bio
+          = @profile.bio
+      .profile__links
+        - if (current_user.id == @profile.user_id)
+          = link_to "Edit", edit_profile_path(current_user.profile), class: "button"
+        - else
+          %h3 follow
+  .profile__stat__row
+    .outer-container
+      .profile__stat
+        %h5 Followers
+        %h3 200
+      .profile__stat
+        %h5 Following
+        %h3 3
+      .profile__stat
+        %h5 Gigs
+        %h3
+          = @profile.gigs.count
+      .profile__stat
+        %h5 Member Since
+        %h3
+          = member_since_date(@profile.user.created_at)
 
-%main.main-container
-  %header.outer-container
-    %img{ src: @profile.image.url }
-    %h4
-      = @profile.name
-    .social-media
-      = render partial: "social", locals: { profile: @profile }
-    .bio
-      = @profile.bio
+  .main-container.outer-container
     %h3
-      Upcoming gigs for #{ @profile.name }
+      Upcoming events for #{ @profile.name }
     - @profile.events.each do |event|
-      = event_flyer_image(event)
-      %h2.event__header__title
-        = link_to event.title, event
+      = render partial: "event", locals: { event: event }
