--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -3,6 +3,7 @@
 @import "field-group";
 @import "containers";
 @import "event";
+@import "footer";
 @import "helpers";
 @import "horizontal-nav";
 @import "logo";
