--- a/app/assets/stylesheets/patterns/_flyer-grid.scss
+++ b/app/assets/stylesheets/patterns/_flyer-grid.scss
@@ -1,43 +1,7 @@
-.flyer-grid {
-  @include outer-container();
-}
-
-.flyer-gutter {
+.js-isotope__gutter-size {
   width: 2%;
 }
 
-.flyer-grid__sizer {
+.js-isotope__column-size {
   width: 32%;
-}
-
-.flyer-grid__flyer {
-  background-color: white;
-  box-shadow: $card-shadow;
-  margin-bottom: 18px;
-  padding: 0;
-  width: 32%;
-}
-
-.flyer {
-  line-height: 0;
-  position: relative;
-  z-index: 0;
-}
-
-.flyer-grid__overlay {
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-  top: 0;
-  left: 0;
-}
-
-.flyer-grid__title {
-  color: white;
-  font-size: 1.25rem;
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
 }
