Add layouts files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,5 +8,6 @@
 @import "bourbon";
 @import "base/base";
 @import "neat";
+@import "layouts/base";
 @import "patterns/base";
 @import "font-awesome";
