Add scopes for various days

--- a/app/assets/stylesheets/patterns/_base.scss
+++ b/app/assets/stylesheets/patterns/_base.scss
@@ -9,6 +9,7 @@
 @import "logo";
 @import "navigation";
 @import "profile";
+@import "sidebar";
 @import "social-media";
 @import "tags";
 @import "venue-card";
