--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$base-font-family: "rooney-sans", $helvetica;
-$heading-font-family: "rooney-sans", $helvetica;
+$base-font-family: "din-2014", $helvetica;
+$heading-font-family: "din-2014", $helvetica;
 
 // Font Sizes
 $base-font-size: 1em;
