--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -28,11 +28,13 @@ h2 {
 }
 
 h3 {
-  font-size: 2em;
+  font-size: 1em;
 }
 
 h4 {
-  font-size: 1.5em;
+  font-size: 0.825em;
+  font-weight: normal;
+  text-transform: uppercase
 }
 
 h5 {
