--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -15,18 +15,20 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$blue: #477dca;
-$dark-gray: #333;
-$medium-gray: #888;
-$light-gray: #eee;
+$blue: #2da1c7;
+$dark-gray: #222;
+$medium-gray: #999;
+$light-gray: #f3f3f3;
 $background-gray: #f7f7f7;
 $subtle-gray: #e1e1e1;
 $warning: #DC302C;
+$base-background-color: #fff;
 
 // Font Colors
-$base-background-color: #fff;
-$base-font-color: $dark-gray;
 $action-color: $blue;
+$base-font-color: $dark-gray;
+$secondary-font-color: $medium-gray;
+$header-nav-color: $medium-gray;
 
 // Border
 $base-border-color: $light-gray;
@@ -39,6 +41,6 @@ $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
 
 // Shadows
-$card-shadow: -1px 0 2px 0 rgba(0,0,0,0.1),
-              1px 0 2px 0 rgba(0,0,0,0.1),
-              0 1px 1px 0 rgba(0,0,0,0.1);
+$card-shadow: -1px 0 2px 0 rgba(0,0,0,0.05),
+              1px 0 2px 0 rgba(0,0,0,0.05),
+              0 1px 1px 0 rgba(0,0,0,0.05);
