Updated navigation bar

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -4,6 +4,7 @@ $heading-font-family: "din-2014", $helvetica;
 
 // Font Sizes
 $base-font-size: 1em;
+$navigation-font-size: 0.825em;
 
 // Line height
 $base-line-height: 1.5;
