--- a/app/assets/stylesheets/patterns/_logo.scss
+++ b/app/assets/stylesheets/patterns/_logo.scss
@@ -1,15 +1,10 @@
-.centered {
-  width: 100%;
-}
-
 .logo {
-  @include transform(translateX(-50%));
-  color: black;
-  font-size: 1.25em;
+  color: white;
+  font-size: 1em;
   font-weight: bold;
   float: left;
-  left: 50%;
   margin: 0 auto;
-  padding: 0.875rem 0;
-  position: absolute;
+  padding: 0.875rem 0 0.875rem;
+  position: relative;
+  text-transform: uppercase;
 }
